--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@reduxjs/toolkit": "^1.8.1",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
@@ -55,6 +56,7 @@
     "react-redux": "^8.0.1",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
